# TradingAgents

./: .chainlit  .coverage  .dockerignore  .env.example  .gitignore  ANALYSIS_SUMMARY.md  BACKTEST_IMPLEMENTATION_SUMMARY.md  CACHE_MIGRATION_GUIDE.md  CITATION.cff  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONCURRENCY_FIXES_REPORT.md  CONTRIBUTING_SECURITY.md  DOCKER.md  DOCUMENTATION_REVIEW.md  DOCUMENTATION_REVIEW_SUMMARY.md  Dockerfile  EXPERT_REVIEW_SUMMARY.md  FAQ.md  IMPROVEMENTS.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.md  MEDIUM_TERM_ENHANCEMENTS.md  NEW_FEATURES.md  PORTFOLIO_IMPLEMENTATION_SUMMARY.md  PRODUCT_ROADMAP_2025.md  PR_READINESS_REPORT.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIXES_QUICK_REF.md  SECURITY_FIX_SUMMARY.md  SECURITY_SUMMARY.md  SETUP_SECURE.md  SQLITE_TO_PGSQL_SCHEMA.md  STRATEGIC_IMPROVEMENTS.md  STRATEGIC_INITIATIVES.md  TECHNICAL_DEBT.md  TESTING_QUICK_START.md  (+21 more)
.github/: FUNDING.yml
cli/: main.py  utils.py
examples/: backtest_example.py  backtest_tradingagents.py  paper_trading_alpaca.py  portfolio_example.py  tradingagents_with_alpaca.py  use_claude.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-ui.mjs  vite.config.ts
frontend/backend/: backtest_service.py  database.py  requirements.txt  seed_data.py  server.py
frontend/src/: App.tsx  index.css
tests/: README.md  __init__.py  conftest.py  test_data_leakage.py  test_llm_factory.py  test_web_app.py
tests/backtest/: test_backtester.py  test_data_handler.py  test_execution.py  test_performance.py
tests/brokers/: __init__.py  test_alpaca_broker.py  test_base_broker.py
tests/portfolio/: __init__.py  test_analytics.py  test_orders.py  test_portfolio.py  test_position.py  test_risk.py
tradingagents/: claude_max_llm.py  default_config.py  llm_factory.py  log_utils.py  nifty50_recommender.py  nifty50_simple_recommender.py  utils.py
tradingagents/agents/: __init__.py
tradingagents/backtest/: README.md  __init__.py  backtester.py  config.py  data_handler.py  exceptions.py  execution.py  integration.py  monte_carlo.py  performance.py  reporting.py  strategy.py  walk_forward.py
(+100 files in other folders)
