[project]
name = "tradingagents"
version = "0.1.0"
description = "Multi-Agent LLM Financial Trading Framework with AI-powered stock analysis, structured debates, and backtesting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hemang Joshi", email = "hemangjoshi37a@gmail.com"},
]
keywords = [
    "trading", "ai", "multi-agent", "llm", "stock-analysis",
    "nifty50", "backtesting", "langchain", "langgraph",
    "algorithmic-trading", "quantitative-finance", "stock-market",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "grip>=4.6.2",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.5.4,<0.6.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "pytz>=2025.2",
    "psycopg[binary]>=3.2.0",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.urls]
Homepage = "https://hjlabs.in"
Repository = "https://github.com/hemangjoshi37a/TradingAgents"
Documentation = "https://github.com/hemangjoshi37a/TradingAgents#readme"
Issues = "https://github.com/hemangjoshi37a/TradingAgents/issues"
"Research Paper" = "https://arxiv.org/abs/2412.20138"
